<!DOCTYPE resources [

    <!ENTITY actual "Actual">
    <!ENTITY targeted "Targeted">

    <!ENTITY cancel "Cancel">
    <!ENTITY clear "Clear">
    <!ENTITY confirm "Confirm">

    <!ENTITY end "End">
    <!ENTITY start "Start">

    <!ENTITY hide "Hide">
    <!ENTITY show "Show">

    <!ENTITY all_data "All Data">
    <!ENTITY define_new "Define New">
    <!ENTITY defined "Defined">
    <!ENTITY delete "Delete">
    <!ENTITY duration "Duration">
    <!ENTITY intensity "Intensity">
    <!ENTITY interval "Interval">
    <!ENTITY notification "Notification">
    <!ENTITY scheduled "Scheduled">
    <!ENTITY time "Time">

    <!ENTITY activities "Activities">
    <!ENTITY activity "Activity">
    <!ENTITY activity_logs "Activity Logs">

    ]>

<resources>

    <string name="app_name">Self Management Helper</string>

    <string name="lang_cn">简</string>
    <string name="lang_zh">繁</string>
    <string name="lang_en">EN</string>

    <string name="clear_all_data">&clear; &all_data;</string>

    <string name="cancel">&cancel;</string>
    <string name="clear">&clear;</string>
    <string name="confirm">&confirm;</string>
    <string name="define_activity">&define_new; &activity;</string>
    <string name="hide_activities">&hide; &defined; &activities;</string>
    <string name="show_activities">&show; &defined; &activities;</string>
    <string name="hide_activity_logs">&hide; &activity_logs;</string>
    <string name="show_activity_logs">&show; &activity_logs;</string>

    <string name="activity_desc">&activity; Description</string>
    <string name="activity_name">&activity; Name</string>
    <string name="activity_end_notification">&notification; On &activity; &end;</string>
    <string name="activity_start_notification">&notification; On &activity; &start;</string>
    <string name="activity_targeted_duration">&targeted; &activity; &duration;</string>
    <string name="activity_targeted_end_time">&targeted; &activity; &end; &time;</string>
    <string name="activity_targeted_start_time">&targeted; &activity; &start; &time;</string>
    <string name="activity_targeted_intensity">&targeted; &activity; &intensity;</string>
    <string name="activity_targeted_interval">&targeted; &activity; &interval;</string>

    <string name="activity_actual_duration">&actual; &activity; &duration;</string>
    <string name="activity_actual_end_time">&actual; &activity; &end; &time;</string>
    <string name="activity_actual_start_time">&actual; &activity; &start; &time;</string>
    <string name="activity_actual_intensity">&actual; &activity; &intensity;</string>

    <string name="delete">&delete;</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
    <string name="save_as">Save As</string>

    <string name="on_clear_all_data">&confirm; &clear; &all_data;\?</string>
    <string name="on_delete_activity">&confirm; &delete; &activity; \"%1$s\"?</string>
    <string name="on_delete_activity_log">&confirm; &delete; this &activity_logs;\?</string>
    <string name="on_empty_edit_text">%1$s can\'t be empty!</string>

    <string name="date_format">yyyy/MMM/dd HH:mm:ss</string>
    <string name="time_separator">&#160;</string>

    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="secs">Seconds</string>
    <string name="weeks">Weeks</string>

    <string name="above">Above</string>
    <string name="below">Below</string>

    <string name="after">After</string>
    <string name="before">Before</string>

    <string name="end">&end;</string>
    <string name="start">&start;</string>

    <string name="hide">&hide;</string>
    <string name="show">&show;</string>

</resources>